<resources>
    <string name="app_name">Wheel of Fortune</string>
    <string name="login_texto_instrucciones"><u>EMPIEZA A JUGAR AHORA</u></string>
    <string name="nombre">Nombre</string>
    <string name="empezar">empezar</string>
    <string name="cero">0</string>
    <string name="ruleta_de_la_suerte">RULETA DE LA SUERTE</string>
    <string name="girar">GIRAR</string>
    <string name="nombreusuario">nombreusuario</string>
    <string name="puntos">puntos</string>
    <string name="volver">VOLVER</string>
    <string name="puntosHistorial">PUNTOS</string>
    <string name="nombres">NOMBRES</string>
    <string name="textview">TextView</string>
    <string name="lista_de_jugadores">MEJORES PUNTUACIONES</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="mensaje">mensaje</string>
    <string name="puntuaciones">PUNTUACIONES</string>
    <string name="introduce_tu_letra">Introduce tu Letra</string>
    <string name="informacion">Informacion</string>
    <string name="formulario_de_registro">Formulario de Registro</string>
    <string name="introduzca_su_nombre">Introduzca su nombre</string>
    <string name="email">Email</string>
    <string name="introduzca_email">Introduzca email</string>
    <string name="introduzca_su_tel_fono">Introduzca su telefono</string>
    <string name="tel_fono">telefono</string>
    <string name="contraseña">Contraseña</string>
    <string name="introduzca_su_contrase_a">Introduzca su contraseña</string>
    <string name="confirme_su_contrase_a">Confirme su contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro_de_usuario"><u>REGISTRO DE USUARIO</u></string>


</resources>