<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaJugadoresActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/TablePuntos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="278dp"
        tools:layout_editor_absoluteY="182dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/TablaNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="182dp" />

    <Button
        android:id="@+id/boton_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#DA5E5E"
        android:text="@string/volver"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="563dp" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombres"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textViewPuntuacion"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="138dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewPuntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puntosHistorial"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="266dp"
        tools:layout_editor_absoluteY="138dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewPrueba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="186dp" />
</androidx.constraintlayout.widget.ConstraintLayout>